deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ozeranec-backend
  labels:
    app: ozeranec-backend
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ozeranec-backend
  template:
    metadata:
      labels:
        app: ozeranec-backend
    spec:
      imagePullSecrets:
      - name: registrypullsecret
      containers:
      - name: ozeranec-backend
        image: docker.dulik.net/ozeranec-backend:latest
---

apiVersion: v1
kind: Service
metadata:
  name: ozeranec-backend
spec:
  selector:
    app: ozeranec-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ozeranec-frontend
  labels:
    app: ozeranec-frontend
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ozeranec-frontend
  template:
    metadata:
      labels:
        app: ozeranec-frontend
    spec:
      imagePullSecrets:
      - name: registrypullsecret
      containers:
      - name: ozeranec-frontend
        image: docker.dulik.net/ozeranec-frontend:latest
---
apiVersion: v1
kind: Service
metadata:
  name: ozeranec-frontend
spec:
  selector:
    app: ozeranec-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
