ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ozeranec-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - ozeranec.cz
    secretName: ozeranec-tls
  rules:
  - host: ozeranec.cz
    http:
      paths:
      - path: /api(/|$)(.*)
        backend:
          serviceName: ozeranec-backend
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ozeranec-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ozeranec.cz
    secretName: ozeranec-tls
  rules:
  - host: ozeranec.cz
    http:
      paths:
      - backend:
          serviceName: ozeranec-frontend
          servicePort: 80
        path: /
